# federation-next

./: CHANGELOG.md  Cargo.toml  Cross.toml  README.md
.circleci/: config.yml
apollo-at-link/: Cargo.toml
apollo-at-link/src/: argument.rs  database.rs  federation_schema.rs  federation_spec_definition.rs  join_spec_definition.rs  lib.rs  link.rs  link_spec_definition.rs  location.rs  referencer.rs  spec.rs  spec_definition.rs
apollo-federation-error/: Cargo.toml
apollo-federation-error/src/: ast.rs
apollo-federation-internals/: Cargo.toml
apollo-federation-internals/src/: ast.rs  build_schema.rs  core_spec.rs  definitions.rs  directive_and_type_specification.rs  error.rs  federation.rs  lib.rs  operations.rs  private.rs  utils.rs  values.rs
apollo-federation/src/: database.rs  lib.rs  merge.rs
apollo-federation/tests/: composition_tests.rs
apollo-harness/: .gitignore  Cargo.toml  README.md
apollo-harness/scripts/: Dockerfile.builder  run_test.sh  run_tests.sh  runit.sh
apollo-harness/testdata/: controlfile
apollo-introspection/: Cargo.toml
apollo-introspection/src/: execution.rs  input_coercion.rs  resolver.rs  response.rs  schema_introspection.rs
apollo-introspection/tests/: doc_example.rs  snapshots.rs
apollo-query-graph/: Cargo.toml
apollo-query-graph/src/: extract_subgraphs_from_supergraph.rs  lib.rs
apollo-subgraph/: Cargo.toml
apollo-subgraph/src/: database.rs  lib.rs  spec.rs
apollo-supergraph/: Cargo.toml
apollo-supergraph/src/: composition.rs  database.rs  lib.rs  merge.rs
cli/src/: main.rs
src/: api_schema.rs  compat.rs  lib.rs  merge.rs  type_specification.rs
src/error/: mod.rs
src/link/: database.rs  federation_spec_definition.rs  graphql_definition.rs  inaccessible_spec_definition.rs  join_spec_definition.rs  mod.rs  spec.rs  spec_definition.rs
src/query_graph/: build_query_graph.rs  condition_resolver.rs  extract_subgraphs_from_supergraph.rs  field_set.rs  graph_path.rs  mod.rs  output.rs  path_tree.rs
src/query_plan/: conditions.rs  display.rs  fetch_dependency_graph.rs  fetch_dependency_graph_processor.rs  generate.rs  mod.rs  operation.rs  query_planner.rs  query_planning_traversal.rs
src/schema/: argument_composition_strategies.rs  definitions.rs  field_set.rs  mod.rs  position.rs  referencer.rs  referencer2.rs  (+2 more)
tests/: api_schema.rs  composition_tests.rs  extract_subgraphs.rs
(+58 files in other folders)
