[package]
name = "apollo-federation-internals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
apollo-parser = "0.6.2"
enum_dispatch = "0.3.12"
indexmap = "2.0.0"
hashlink = "0.8.4"
lazy_static = "1.4.0"
regex = "1.9.6"
serde_json = "1.0.107"
strum = "0.25.0"
strum_macros = "0.25.2"
thiserror = "1.0.48"
