[package]
name = "apollo-subgraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apollo-at-link = { path = "../apollo-at-link", version = "0.1.0" }
apollo-compiler = "0.10.0"
apollo-encoder = "0.6.0"
salsa = "0.16.1"
thiserror = "1.0"
